[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.7.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"
rust-version = "1.63"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
# halo2derive = {path = "derive", version="0.1.0"}
blst = { version = "0.3.13", default-features = true }
rand_core = "0.6"
ff = "0.13"
group = { version = "0.13", features = ["tests"] }
pairing_lib = { version = "0.23", package = "pairing" }
subtle = "2.2.1"
rand = "0.8"
bitvec = "1.0.1"

pasta_curves = "0.5.0"
halo2curves = { version = "0.7.0" }


serde = { version = "1.0", features = ["derive"], optional = true }
ec-gpu = { version = "0.2.0", optional = true }
byte-slice-cast = "1.0.0"
num-bigint = "0.4.6"

[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"

[features]
default = ["serde"]
portable = ["blst/portable"]
gpu = ["ec-gpu"]
__private_bench = []
